--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,240 @@
 body{
-  font-size: 16px;
+  max-width: 1024px;
+  font-size: 14px;
   font-family:'Open Sans Condensed', sans-serif;
+  margin:0 auto;
+  padding: 0;
 }
-font-family: 'Open Sans Condensed', sans-serif;
+/*****font-family: 'Open Sans Condensed', sans-serif;
 font-family: 'Open Sans', sans-serif;
-
+h1 { font-size: 2em; }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.17em; }
+h4 { font-size: 1.12em; }
+h5 { font-size: .83em; }
+h6 { font-size: .75em; }
+****/
+h1{
+  font-family: 'Open Sans', sans-serif;
+  font-size:2rem;
+  font-weight: bold;
+  padding:1.5rem 0;
+}
+h2{
+  font-family: 'Open Sans', sans-serif;
+  font-size:1.75rem;
+  font-weight: bold;
+  padding:1.0rem 0;
+}
+h3{
+  font-family: 'Open Sans', sans-serif;
+  font-size:1.5rem;
+  padding:.75rem 0;
+}
+h4{
+  font-family: 'Open Sans', sans-serif;
+  font-size:1rem;
+  padding:.5rem 0;
+}
+p{
+  padding:1rem 0;
+  font-family:'Open Sans Condensed', sans-serif;
+  font-size: 1rem;
+}
+/*****HEADER SECTION*****/
 header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height:64px;
+  margin:0 24px;
+}
+header .logo img{
+  height:32px;
+}
+header span{
+  font-size: 1.75rem;
+  color:gray;
+  padding-bottom: 5px;
+}
+header span.bold{
+  font-weight: bold;
+  font-size: 1.75rem;
+  color:black;
+  padding-bottom: 5px;
+}
+.logo{
+  display:flex;
+  align-items: center;
+}
+nav ul{
+  display:flex;
+}
+nav li{
+  padding-left: 16px;
+}
+/***** Jumbotron*****/
+.jumbotron{
+  display: flex;
+  align-items: center;
+  background-color: whitesmoke;
+
+}
+.jumbotron img{
+  width:60%;
+  padding:32px 24px 32px 24px;
+}
+.jumbotron div{
+  width:40%;
+}
+.button{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  color:white;
+  font-weight: bold;
+  text-decoration: none;
+  margin-right: 1.5rem;
+  height:4rem;
+  border:1px solid whitesmoke;
+  border-radius: 8px;
+}
+/*****EVENTS SECTION*****/
+.events{
+  display:flex;
+}
+.left{
+  display:flex;
+  flex-direction: column;
+  width:60%;
+  padding:32px 24px;
+  border-right:2px solid whitesmoke;
+}
+.left img{
+  max-width:100%
+}
+.left h2{
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.right{
+  display:flex;
+  flex-direction: column;
+  justify-content:flex-start;
+  width:40%;
+  padding-top: 16px;
+}
+.event{
+  display:flex;
+}
+.event-left{
+  width: 35%;
+  align-self: center;
+  padding: 16px 16px;
+}
+.event-left img{
+  max-width: 100%;
+  align-self: center;
+}
+.event-right{
+  width:65%;
+}
+.event-right a{
+  text-decoration: none;
+  color:blue;
+  font-weight: bold;
+}
+.event.gray{
+  background-color: whitesmoke;
+}
+/*****COURSES SECTION*****/
+.courses{
+  background-color: whitesmoke;
+}
+.courses h2{
+  margin-top: 32px;
+  text-align: center;
+}
+.programs{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin:2.25rem; auto;
+}
+.program{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width:31%;
+  background-color: white;
+  margin-bottom: 1rem;
+}
+.program h3,
+.program h4,
+.program p{
+    margin-left: .6rem;
+}
+/***** THESIS SECTION*****/
+.title{
+  margin:2.3rem auto;
+  text-align: center;
+
+}
+.thesis{
+  width:100%;
+  display:flex;
 
 }
 
+.thesis-left{
+  display:flex;
+  flex-direction: column;
+  max-width: 60%;
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+.thesis-left video{
+  margin: 0;
+  max-width: 100%;
+  object-fit: fill;
+}
+.thesis-right{
+  display:flex;
+  flex-direction: column;
+  max-width: 40%;
+}
+.paper{
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+}
+.paper.gray{
+  background-color: whitesmoke;
+}
+.paper-left{
+  max-width: 40%;
+}
+.paper-right{
+  display:flex;
+  flex-direction: column;
+  max-width: 60%;
+}
+.paper-right h3{
+  padding: 1.0rem 0 .5rem 0;
+}
+.paper img{
+  max-width: 80%;
+  height:auto;
+  align-self: center;
+  margin: 1.15rem;
+}
+/***** FOOTER *****/
 footer{
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height:64px;
+  padding: 0 24px;
+  border-top: 1px solid gray;
 }
