--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -243,6 +243,8 @@ footer nav ul{
 @media only screen and (max-width : 380px){
   body{
     max-width: 100%;
+    margin:0;
+    padding:0;
   }
   /*****Header/Nav SECTION*****/
   header span{
