--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -240,7 +240,7 @@ footer nav ul{
 }
 
 /*****MOBILE LAYOUT*****/
-@media only screen and (max-width : 380px){
+@media only screen and (min-width: 320px) and (max-width: 480px){
   body{
     max-width: 100%;
     margin:0;
